# ImageAivsReal

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  gitlab-ci.yml  main.py  makefile  mlflow.db  pyproject.toml  requirements.txt  script_tiempos_inf.py
app/: Dockerfile  app.py  batch_upload.py  clientGrpc.py  result_table.py  streamlit_app.py  ui_components.py
docs/: arquitectura.md  documentacion_arranque  result_schema.md
proto/: inference.proto
service/: Dockerfile  inference_server.py
service/inference/: __init__.py  inference_engine.py  mlflow_health_check.py  model_loader.py  preprocessing.py
services/: inference_server.py
tests/: __init__.py  conftest.py  test_client_grpc.py  test_grpc_server.py  test_grpc_stubs.py  test_inference_engine.py  test_preprocessing.py
