[project]
name = "imageaivsreal"
version = "0.1.0"
description = "Aplicación web en Streamlit para clasificar imágenes como generadas por IA o reales."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- Interfaz web ---
    "streamlit>=1.45.0",

    # --- Inferencia / Modelos IA ---
    "transformers>=4.52.0",
    "torch>=2.7.0",
    "accelerate>=1.7.0",

    # --- Procesamiento de imágenes y datos ---
    "Pillow>=11.2.1",
    "pandas>=2.2.3",

    # --- gRPC (comunicación cliente-servidor) ---
    "grpcio>=1.78.1",
    "grpcio-tools>=1.78.1",
    "protobuf>=6.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-cov>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"